src/types/tests/snapshots/tgbot__types__tests__input__input_media_animation-2.snap
---
source: src/types/tests/input.rs
expression: data
---
{
  "type": "animation",
  "caption": "caption",
  "duration": 10,
  "has_spoiler": true,
  "height": 200,
  "media": "attach://im_media",
  "parse_mode": "Markdown",
  "show_caption_above_media": true,
  "thumbnail": "attach://im_tmb",
  "width": 200
}
