src/types/tests/snapshots/tgbot__types__tests__input__input_media_audio-2.snap
---
source: src/types/tests/input.rs
expression: actual_data
---
{
  "__attachments__": [
    {
      "id": "tgbot_file_1",
      "mime_type": null,
      "name": null
    },
    {
      "id": "tgbot_file_2",
      "mime_type": null,
      "name": null
    }
  ],
  "caption": "caption",
  "duration": 10,
  "media": "attach://tgbot_file_1",
  "parse_mode": "Markdown",
  "performer": "test performer",
  "thumbnail": "attach://tgbot_file_2",
  "title": "test title",
  "type": "audio"
}
