src/types/tests/snapshots/tgbot__types__tests__input__input_media_audio.snap
---
source: src/types/tests/input.rs
expression: actual_data
---
{
  "caption": "test",
  "media": "audio-file-id",
  "type": "audio"
}
