src/types/tests/snapshots/tgbot__types__tests__input__input_media_document-2.snap
---
source: src/types/tests/input.rs
expression: data
---
{
  "type": "document",
  "caption": "caption",
  "disable_content_type_detection": true,
  "media": "attach://im_media",
  "parse_mode": "Markdown",
  "thumbnail": "attach://im_tmb"
}
