src/types/tests/snapshots/tgbot__types__tests__input__input_media_document.snap
---
source: src/types/tests/input.rs
expression: data
---
{
  "type": "document",
  "caption": "test",
  "media": "audio-file-id"
}
