src/types/tests/snapshots/tgbot__types__tests__input__input_media_link.snap
---
source: src/types/tests/input.rs
expression: data
---
{
  "type": "link",
  "url": "https://example.com"
}
