src/types/tests/snapshots/tgbot__types__tests__input__input_media_live_photo-2.snap
---
source: src/types/tests/input.rs
expression: "InputMediaLivePhoto::default().with_caption(\"test\").with_parse_mode(ParseMode::Markdown).with_show_caption_above_media(true).with_has_spoiler(false)"
---
{
  "caption": "test",
  "parse_mode": "Markdown",
  "show_caption_above_media": true,
  "has_spoiler": false
}
