src/types/tests/snapshots/tgbot__types__tests__input__input_media_live_photo.snap
---
source: src/types/tests/input.rs
expression: data
---
{
  "type": "live_photo",
  "caption": "test",
  "has_spoiler": false,
  "media": "https://example.com/video.mp4",
  "parse_mode": "Markdown",
  "photo": "https://example.com/photo.png",
  "show_caption_above_media": true
}
