src/types/tests/snapshots/tgbot__types__tests__input__input_media_location-2.snap
---
source: src/types/tests/input.rs
expression: actual_data
---
{
  "horizontal_accuracy": 3.0,
  "latitude": 1.0,
  "longitude": 2.0,
  "type": "location"
}
