src/types/tests/snapshots/tgbot__types__tests__input__input_media_location.snap
---
source: src/types/tests/input.rs
expression: actual_data
---
{
  "latitude": 1.0,
  "longitude": 2.0,
  "type": "location"
}
